Creada seccion projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,6 +4,7 @@ import ProjectCard from './ProjectCard.astro';
 
 const projects = [
   {
+    id: 'proyecto1',
     image: '/Usuario-Pruebas.jpg',
     title: 'Visor de campo de golf con realidad aumentada',
     description: 'Una ayuda a los golfista que permite visualizar el campo en el que juegas desde diferentes perspectivas. Mostrando las distancias a los obstaculos.',
@@ -11,6 +12,7 @@ const projects = [
     videoUrl: 'https://youtube.com/...',
   },
   {
+    id: 'proyecto2',
     image: '/imagenfinal.jpg',
     title: 'Ikeacraze',
     description: 'Videojuego donde el jugador debe crear muebles y entregarlos en un tiempo limite. Desarrollado en Unity y C#. Desarrollado junto a 4 compañeros para la asignatura de Desarrollo de Videojuegos.',
@@ -18,6 +20,7 @@ const projects = [
     videoUrl: 'https://vimeo.com/1117384670',
   },
   {
+    id: 'proyecto3',
     image: '/Malla.png',
     title: 'Tela hecha con position based dynamics',
     description: 'Una simulación de tela que utiliza dinámicas basadas en la posición para crear efectos realistas. Desarrollada con processing y C++.',
@@ -25,6 +28,7 @@ const projects = [
     videoUrl: 'https://vimeo.com/1047753032?share=copy',
   },
   {
+    id: 'proyecto4',
     image: '/Aprendizaje.png',
     title: 'Aprendizaje por refuerzo',
     description: 'Un proyecto para entrenar un agente inteligente utilizando técnicas de aprendizaje por refuerzo. Implementado en Python.',
@@ -32,6 +36,7 @@ const projects = [
     videoUrl: 'https://vimeo.com/1047752922?share=copy',
   },
   {
+    id: 'proyecto5',
     image: '/proyecto5.png',
     title: 'Simulador de finanzas personales',
     description: 'Una herramienta web que permite a los usuarios simular y planificar sus finanzas personales. Desarrollada con Vue.js y Node.js para el backend.',
