--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ const projects = [
     image: '/Usuario-Pruebas.jpg',
     title: 'Visor de campo de golf con realidad aumentada',
     description: 'Una ayuda a los golfista que permite visualizar el campo en el que juegas desde diferentes perspectivas. Mostrando las distancias a los obstaculos.',
-    pageUrl: 'https://example.com/proyecto1',
+    githubUrl: 'https://example.com/proyecto1',
     videoUrl: 'https://youtube.com/...',
   },
   {
@@ -16,7 +16,7 @@ const projects = [
     image: '/imagenfinal.jpg',
     title: 'Ikeacraze',
     description: 'Videojuego donde el jugador debe crear muebles y entregarlos en un tiempo limite. Desarrollado en Unity y C#. Desarrollado junto a 4 compañeros para la asignatura de Desarrollo de Videojuegos.',
-    pageUrl: 'https://example.com/proyecto2',
+    githubUrl: 'https://example.com/proyecto2',
     videoUrl: 'https://vimeo.com/1117384670',
   },
   {
@@ -24,7 +24,7 @@ const projects = [
     image: '/Malla.png',
     title: 'Tela hecha con position based dynamics',
     description: 'Una simulación de tela que utiliza dinámicas basadas en la posición para crear efectos realistas. Desarrollada con processing y C++.',
-    pageUrl: 'https://example.com/proyecto3',
+    githubUrl: 'https://github.com/kitex03/PBD',
     videoUrl: 'https://vimeo.com/1047753032?share=copy',
   },
   {
@@ -32,7 +32,7 @@ const projects = [
     image: '/Aprendizaje.png',
     title: 'Aprendizaje por refuerzo',
     description: 'Un proyecto para entrenar un agente inteligente utilizando técnicas de aprendizaje por refuerzo. Implementado en Python.',
-    pageUrl: 'https://example.com/proyecto4',
+    githubUrl: 'https://example.com/proyecto4',
     videoUrl: 'https://vimeo.com/1047752922?share=copy',
   },
   {
@@ -40,7 +40,7 @@ const projects = [
     image: '/proyecto5.png',
     title: 'Simulador de finanzas personales',
     description: 'Una herramienta web que permite a los usuarios simular y planificar sus finanzas personales. Desarrollada con Vue.js y Node.js para el backend.',
-    pageUrl: 'https://example.com/proyecto5',
+    githubUrl: 'https://example.com/proyecto5',
     videoUrl: 'https://youtube.com/...',
   },
 ];
