--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,4 +29,20 @@ const {title} = Astro.props;
 			width: 100%;
 			height: 100%;
 		}
+	@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html{
+    scroll-behavior: smooth;
+}
+
+.habilidades-lista img {
+  width: 4rem;      /* igual a w-8 */
+  height: 4rem;     /* igual a h-8 */
+  background: #50505a; /* igual a bg-neutral-900 */
+  padding: 0.25rem; /* igual a p-1 */
+  border-radius: 0.5rem; /* igual a rounded */
+}
+
 </style>
