Cambiados los enlaces de los videos de los proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,7 +9,7 @@ const projects = [
     title: 'Visor de campo de golf con realidad aumentada',
     description: 'Una ayuda a los golfista que permite visualizar el campo en el que juegas desde diferentes perspectivas. Mostrando las distancias a los obstaculos.',
     githubUrl: 'https://github.com/kitex03/TFG',
-    videoUrl: 'https://youtube.com/...',
+    videoUrl: 'https://vimeo.com/1119003775?share=copy',
   },
   {
     id: 'proyecto2',
@@ -41,7 +41,7 @@ const projects = [
     title: 'Generador de terrenos procedurales 3D',
     description: 'Un addon para Unity que permite generar terrenos 3D de forma procedural. Incluye opciones para personalizar la topografía y texturización del terreno.',
     githubUrl: 'https://github.com/kitex03/Terrenos',
-    videoUrl: 'https://youtube.com/...',
+    videoUrl: 'https://vimeo.com/1119108042?share=copy',
   },
   {
     id: 'proyecto6',
@@ -49,7 +49,7 @@ const projects = [
     title: 'Juego de dardos en RV',
     description: 'Una caseta de feria donde hay un juego de dardos en realidad virtual. Proyecto desarrollado por parejas con Unity y C#.',
     githubUrl: 'https://github.com/kitex03/CasetaFeriaVR',
-    videoUrl: 'https://youtube.com/...',
+    videoUrl: 'https://vimeo.com/1119009880?share=copy',
   },
 ];
 ---
