Cambios en el enlace del segundo proyecto

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,7 +16,7 @@ const projects = [
     image: '/portfolioWeb/imagenfinal.jpg',
     title: 'Ikeacraze',
     description: 'Videojuego donde el jugador debe crear muebles y entregarlos en un tiempo limite. Desarrollado en Unity y C#. Desarrollado junto a 4 compañeros para la asignatura de Desarrollo de Videojuegos.',
-    githubUrl: 'https://example.com/proyecto2',
+    githubUrl: 'https://github.com/kitex03/Ikeacraze',
     videoUrl: 'https://vimeo.com/1117384670',
   },
   {
