--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,8 +14,7 @@ const {title} = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<div class="fixed top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]">
-		</div>
+		<div class="fixed inset-0 z-[-2] min-h-screen w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 		<Header />
 		<main id="content" class="pt-20 justify-center max-w-6xl mx-auto px-4 flex flex-col items-center">
 			<slot />
